--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -5,81 +5,116 @@
 
   gather_facts: false
 
-  vars:
+  roles:
 
-    pg_user: molecule
-    pg_pass: molecule
+    - nephelaiio.plugins
 
   pre_tasks:
 
-    - name: deploy test postgresql db blue
+    - name: deploy postgresql db
       kubernetes.core.helm:
-        name: molecule-blue
+        name: postgresql
         chart_ref: postgresql
         chart_repo_url: https://charts.bitnami.com/bitnami
-        release_namespace: molecule
+        release_namespace: "{{ postgres_namespace }}"
         create_namespace: true
         state: present
         wait: true
-        kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
-        binary_path: "{{ k8s_helm_bin | default(omit) }}"
+        kubeconfig: "{{ k8s_kubeconfig }}"
+        binary_path: "{{ k8s_helm_bin }}"
         values:
           global:
             postgresql:
               auth:
-                postgresPassword: "{{ pg_pass}}"
-                username: "{{ pg_user }}"
-                password: "{{ pg_pass }}"
-                database: blue
+                postgresPassword: "{{ postgres_db_pass}}"
           primary:
             service:
               type: LoadBalancer
               annotations:
-                metallb.universe.tf/address-pool: public
-                external-dns.alpha.kubernetes.io/hostname: "blue.{{ k8s_cluster_name }}"
+                metallb.universe.tf/address-pool: private
+                external-dns.alpha.kubernetes.io/hostname: "{{ postgres_db_host }}"
 
-    - name: deploy test postgresql db green
-      kubernetes.core.helm:
-        name: molecule-green
-        chart_ref: postgresql
-        chart_repo_url: https://charts.bitnami.com/bitnami
-        release_namespace: molecule
-        create_namespace: true
-        state: present
-        wait: true
-        kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
-        binary_path: "{{ k8s_helm_bin | default(omit) }}"
-        values:
-          global:
-            postgresql:
-              auth:
-                postgresPassword: "{{ pg_pass}}"
-                username: "{{ pg_user }}"
-                password: "{{ pg_pass }}"
-                database: green
-          primary:
-            service:
-              type: LoadBalancer
-              annotations:
-                metallb.universe.tf/address-pool: public
-                external-dns.alpha.kubernetes.io/hostname: "green.{{ k8s_cluster_name }}"
+    - name: set service metadata
+      ansible.builtin.set_fact:
+        loadbalancer_data: "{{ _loadbalancers }}"
+        loadbalancer_failed: "{{ _loadbalancers | json_query(status_filter) }}"
+        loadbalancer_ips: "{{ _loadbalancers | json_query(dns_filter) | json_query(dns_map) | to_dict }}"
+      vars:
+        _loadbalancers: "{{ service_data | json_query(loadbalancer_filter) }}"
+        service_data: "{{ service_query | selectattr('spec.type', 'equalto', 'LoadBalancer') }}"
+        dns_filter: "[?((metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\" || '') != '')]"
+        dns_map: "[].to_array([metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\", status.loadBalancer.ingress[0].ip])"
+        loadbalancer_filter: "[?(spec.type == 'LoadBalancer')]"
+        status_filter: "[?!not_null(status.loadBalancer)].metadata.name"
+        service_query: "{{
+          query(
+            'kubernetes.core.k8s',
+            kind='Service',
+            namespace=postgres_namespace,
+            kubeconfig=k8s_kubeconfig
+          )
+        }}"
 
-    - name: deploy test mysql db black
-      kubernetes.core.helm:
-        name: molecule-black
-        chart_ref: mysql
-        chart_repo_url: https://charts.bitnami.com/bitnami
-        release_namespace: molecule
-        create_namespace: true
+    - name: drop database
+      community.postgresql.postgresql_db:
+        name: "{{ postgres_db_name }}"
         state: absent
-        wait: true
-        kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
-        binary_path: "{{ k8s_helm_bin | default(omit) }}"
-        values:
-          global:
-            postgresql:
-              auth:
-                postgresPassword: "{{ pg_pass}}"
-                username: "{{ pg_user }}"
-                password: "{{ pg_pass }}"
-                database: blue
+        login_user: "{{ postgres_db_user }}"
+        login_password: "{{ postgres_db_pass }}"
+        login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+
+    - name: create database
+      community.postgresql.postgresql_db:
+        name: "{{ postgres_db_name }}"
+        state: present
+        login_user: "{{ postgres_db_user }}"
+        login_password: "{{ postgres_db_pass }}"
+        login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+
+    - name: create data tempdir
+      ansible.builtin.tempfile:
+        state: directory
+        prefix: data
+      register: datadir
+      changed_when: false
+
+    - block:
+
+        - name: fetch pagila schema file
+          ansible.builtin.get_url:
+            url: https://github.com/devrimgunduz/pagila/raw/master/pagila-schema.sql
+            dest: "{{ datadir.path }}/schema.sql"
+          changed_when: false
+
+        - name: fetch pagila data file
+          ansible.builtin.get_url:
+            url: https://github.com/devrimgunduz/pagila/raw/master/pagila-data.sql
+            dest: "{{ datadir.path }}/data.sql"
+          changed_when: false
+
+        - name: concatenate pagila sql files
+          ansible.builtin.shell: "cat {{ datadir.path }}/schema.sql {{ datadir.path }}/data.sql > {{ datadir.path }}/pagila.sql"
+
+        - name: load pagila db data
+          community.postgresql.postgresql_db:
+            name: "{{ postgres_db_name }}"
+            state: restore
+            login_user: "{{ postgres_db_user }}"
+            login_password: "{{ postgres_db_pass }}"
+            login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+            target: "{{ datadir.path }}/pagila.sql"
+          changed_when: false
+
+      always:
+
+        - name: destroy data tempdir
+          ansible.builtin.file:
+            state: absent
+            path: "{{ datadir.path }}"
+          changed_when: false
+
+    - name: load postgresql data
+      ansible.builtin.shell: "zcat data/pagila.sql | psql -h {{ loadbalancer_ips[postgres_db_host] }} -U postgres {{ postgres_db_name }}"
+      environment:
+        PGPASSWORD: "{{ postgres_db_pass }}"
+      tags: never
