--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,18 +6,16 @@ authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+psycopg2 = "^2.9.3"
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 molecule = "^4.0.1"
 kubernetes = "^24.2.0"
 openshift = "^0.13.1"
 jmespath = "^1.0.1"
 docker = "^6.0.0"
-
-[tool.poetry.group.dev.dependencies]
 ansible = "^6.3.0"
 netaddr = "^0.8.0"
-kubernetes = "^24.2.0"
 MarkupSafe = "2.0.1"
 
 [build-system]
