--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -35,7 +35,7 @@ provisioner:
           k8s_helm_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/helm
           k8s_wait_timeout: 500
           k8s_pgo_deploy: true
-          k8s_strimzi_deploy: true
+          k8s_strimzi_deploy: false
           k8s_argocd_deploy: false
           k8s_longhorn_deploy: false
           k8s_awxoperator_deploy: false
@@ -53,6 +53,10 @@ provisioner:
           postgres_db_user: postgres
           postgres_db_pass: molecule
           postgres_db_name: pagila
+
+          # metabase vardefs
+          dataplane_namespace: dataplane
+          dataplane_metabase_hostname: "metabase.{{ k8s_cluster_name }}"
 
 verifier:
   name: ansible
