--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -9,67 +9,71 @@
 
     - nephelaiio.plugins
 
-  pre_tasks:
+  tasks:
 
-    - name: deploy postgresql db
+    - name: deploy metabase helm chart
       kubernetes.core.helm:
-        name: postgresql
-        chart_ref: postgresql
-        chart_repo_url: https://charts.bitnami.com/bitnami
-        release_namespace: "{{ postgres_namespace }}"
-        create_namespace: true
         state: present
+        name: metabase
+        chart_ref: "{{ dataplane_path }}/charts/metabase"
+        release_namespace: "{{ dataplane_namespace }}"
+        create_namespace: true
         wait: true
         kubeconfig: "{{ k8s_kubeconfig }}"
         binary_path: "{{ k8s_helm_bin }}"
         values:
-          global:
-            postgresql:
-              auth:
-                postgresPassword: "{{ postgres_db_pass}}"
-          primary:
-            service:
-              type: LoadBalancer
-              annotations:
-                metallb.universe.tf/address-pool: private
-                external-dns.alpha.kubernetes.io/hostname: "{{ postgres_db_host }}"
+          ingress:
+            hostname: "{{ dataplane_metabase_hostname }}"
 
-    - name: set service metadata
-      ansible.builtin.set_fact:
-        loadbalancer_data: "{{ _loadbalancers }}"
-        loadbalancer_failed: "{{ _loadbalancers | json_query(status_filter) }}"
-        loadbalancer_ips: "{{ _loadbalancers | json_query(dns_filter) | json_query(dns_map) | to_dict }}"
+    - name: deploy source postgresql db
+      kubernetes.core.k8s:
+        state: present
+        kubeconfig: "{{ k8s_kubeconfig | default(omit) }}"
+        resource_definition: "{{ _definition }}"
       vars:
-        _loadbalancers: "{{ service_data | json_query(loadbalancer_filter) }}"
-        service_data: "{{ service_query | selectattr('spec.type', 'equalto', 'LoadBalancer') }}"
-        dns_filter: "[?((metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\" || '') != '')]"
-        dns_map: "[].to_array([metadata.annotations.\"external-dns.alpha.kubernetes.io/hostname\", status.loadBalancer.ingress[0].ip])"
-        loadbalancer_filter: "[?(spec.type == 'LoadBalancer')]"
-        status_filter: "[?!not_null(status.loadBalancer)].metadata.name"
-        service_query: "{{
-          query(
-            'kubernetes.core.k8s',
-            kind='Service',
-            namespace=postgres_namespace,
-            kubeconfig=k8s_kubeconfig
-          )
-        }}"
+        _definition: |
+          apiVersion: acid.zalan.do/v1
+          kind: postgresql
+          metadata:
+            name: {{ dataplane_src_team }}-{{ dataplane_src_db }}
+            namespace: {{ dataplane_src_namespace }}
+          spec:
+            teamId: {{ dataplane_src_team }}
+            volume:
+              size: 1Gi
+            numberOfInstances: 2
+            allowedSourceRanges:
+              - 0.0.0.0/0
+            enableMasterLoadBalancer: true
+            serviceAnnotations:
+              metallb.universe.tf/address-pool: private
+            users:
+              zalando:
+                - superuser
+                - createdb
+              {{ dataplane_src_user }}: []
+            databases:
+              {{ dataplane_src_db }}: {{ dataplane_src_user }}
+            postgresql:
+              version: "13"
+
+    - fail:
 
     - name: drop database
       community.postgresql.postgresql_db:
-        name: "{{ postgres_db_name }}"
+        name: "{{ pg_test_name }}"
         state: absent
-        login_user: "{{ postgres_db_user }}"
-        login_password: "{{ postgres_db_pass }}"
-        login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+        login_user: "{{ pg_test_user }}"
+        login_password: "{{ pg_test_pass }}"
+        login_host: "{{ loadbalancer_ips[pg_test_host] }}"
 
     - name: create database
       community.postgresql.postgresql_db:
-        name: "{{ postgres_db_name }}"
+        name: "{{ pg_test_name }}"
         state: present
-        login_user: "{{ postgres_db_user }}"
-        login_password: "{{ postgres_db_pass }}"
-        login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+        login_user: "{{ pg_test_user }}"
+        login_password: "{{ pg_test_pass }}"
+        login_host: "{{ loadbalancer_ips[pg_test_host] }}"
 
     - name: create data tempdir
       ansible.builtin.tempfile:
@@ -97,11 +101,11 @@
 
         - name: load pagila db data
           community.postgresql.postgresql_db:
-            name: "{{ postgres_db_name }}"
+            name: "{{ pg_test_name }}"
             state: restore
-            login_user: "{{ postgres_db_user }}"
-            login_password: "{{ postgres_db_pass }}"
-            login_host: "{{ loadbalancer_ips[postgres_db_host] }}"
+            login_user: "{{ pg_test_user }}"
+            login_password: "{{ pg_test_pass }}"
+            login_host: "{{ loadbalancer_ips[pg_test_host] }}"
             target: "{{ datadir.path }}/pagila.sql"
           changed_when: false
 
@@ -112,9 +116,3 @@
             state: absent
             path: "{{ datadir.path }}"
           changed_when: false
-
-    - name: load postgresql data
-      ansible.builtin.shell: "zcat data/pagila.sql | psql -h {{ loadbalancer_ips[postgres_db_host] }} -U postgres {{ postgres_db_name }}"
-      environment:
-        PGPASSWORD: "{{ postgres_db_pass }}"
-      tags: never
