--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,9 +6,8 @@ authors = ["Teodoro Cook <teodoro.cook@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-psycopg2 = "^2.9.3"
 
-[tool.poetry.group.dev.dependencies]
+[tool.poetry.dev-dependencies]
 molecule = "^4.0.1"
 kubernetes = "^24.2.0"
 openshift = "^0.13.1"
@@ -17,6 +16,7 @@ docker = "^6.0.0"
 ansible = "^6.3.0"
 netaddr = "^0.8.0"
 MarkupSafe = "2.0.1"
+psycopg2-binary = "^2.9.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
