Set appVersion for metabase chart

--- a/charts/metabase/Chart.yaml
+++ b/charts/metabase/Chart.yaml
@@ -1,7 +1,7 @@
 ---
 apiVersion: v2
 name: metabase
-description: A Helm chart for Kubernetes
+description: A Helm chart to deploy and configure Metabase
 
 # A chart can be either an 'application' or a 'library' chart.
 #
@@ -22,4 +22,4 @@ version: 0.1.0
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
-appVersion: "1.16.0"
+appVersion: "v0.44.2"
