--- a/charts/metabase/values.yaml
+++ b/charts/metabase/values.yaml
@@ -4,7 +4,7 @@ replicaCount: 2
 image:
   repository: metabase/metabase
   pullPolicy: IfNotPresent
-  tag: "v0.44.2"
+  tag: ""
 
 imagePullSecrets: []
 nameOverride: ""
