--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -26,6 +26,8 @@
             enabled: true
             className: nginx-private
             hostName: "{{ dataplane_metabase_hostname }}"
+            annotations:
+              cert-manager.io/cluster-issuer: "{{ k8s_certmanager_issuer_name }}"
 
     - name: deploy source postgresql db
       kubernetes.core.k8s:
