--- a/charts/metabase/templates/secret.yml
+++ b/charts/metabase/templates/secret.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "metabase.fullname" . }}-api-token
+  name: {{ include "dataplane.fullname" . }}-api-token
 type: Opaque
 data:
-{{- ( include "api.secret" . ) | indent 2 -}}
+{{- ( include "dataplane.metabase.api.secret" . ) | indent 2 -}}
