--- a/charts/metabase/templates/service.yaml
+++ b/charts/metabase/templates/service.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "metabase.fullname" . }}
+  name: {{ include "dataplane.fullname" . }}
   labels:
-    {{- include "metabase.labels" . | nindent 4 }}
+    {{- include "dataplane.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -13,4 +13,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "metabase.selectorLabels" . | nindent 4 }}
+    {{- include "dataplane.selectorLabels" . | nindent 4 }}
