--- a/charts/metabase/templates/tests/test-connection.yaml
+++ b/charts/metabase/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "metabase.fullname" . }}-test-connection"
+  name: "{{ include "dataplane.fullname" . }}-test-connection"
   labels:
-    {{- include "metabase.labels" . | nindent 4 }}
+    {{- include "dataplane.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "metabase.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "dataplane.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
