--- a/charts/dataplane/templates/secret.yml
+++ b/charts/dataplane/templates/secret.yml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "dataplane.fullname" . }}-api-token
+  name: {{ include "dataplane.metabase.api.secret.name" . }}
 type: Opaque
 data:
 {{- ( include "dataplane.metabase.api.secret" . ) | indent 2 -}}
