Fix various testing errors

--- a/charts/dataplane/Chart.yaml
+++ b/charts/dataplane/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v2
-name: metabase
+name: dataplane
 description: A Helm chart to deploy and configure Metabase
 
 # A chart can be either an 'application' or a 'library' chart.
