Add warehouse cluster to deployment

--- a/charts/dataplane/values.yaml
+++ b/charts/dataplane/values.yaml
@@ -51,7 +51,7 @@ zalando:
     serviceAnnotations: {}
     allowedSourceRanges:
       - 127.0.0.1
-    user: metabase
+    user: strimzi
 
 resources: {}
 
