--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -34,8 +34,8 @@ provisioner:
           k8s_verifier_path: ${MOLECULE_EPHEMERAL_DIRECTORY}
           k8s_helm_bin: ${MOLECULE_EPHEMERAL_DIRECTORY}/helm
           k8s_wait_timeout: 500
-          k8s_pgo_deploy: true
-          k8s_strimzi_deploy: false
+          k8s_zalando_deploy: true
+          k8s_strimzi_deploy: true
           k8s_argocd_deploy: false
           k8s_longhorn_deploy: false
           k8s_awxoperator_deploy: false
