Add kind v0.16.0 to test scenarios

--- a/.github/workflows/molecule.yml
+++ b/.github/workflows/molecule.yml
@@ -55,6 +55,8 @@ jobs:
     strategy:
       matrix:
         include:
+          - release: v0.16.0
+            image: v1.24.6
           - release: v0.15.0
             image: v1.24.4
           - release: v0.15.0
